<resources>
    <string name="app_name">Kartu Jakarta Pintar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_sign_in_short">DAFTAR</string>
    <string name="email">Email</string>
    <string name="hint_nama">NAMA</string>
    <string name="minimum_password">Password too short, enter minimum 8 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_password">PASSWORD</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Buat akun anda</string>
    <string name="btn_link_to_login">Masuk disini</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_nisn">NISN</string>
    <string name="hint_no_kk">No. KK</string>
    <string name="hint_no_ktp">No. KTP</string>
    <string name="hint_nama_lengkap">Nama Lengkap</string>
    <string name="hint_jk">Jenis Kelamin</string>
    <string name="hint_tempat_lahir">Tempat Lahir</string>
    <string name="hint_tanggal_lahir">Tanggal Lahir</string>
    <string name="hint_alamat">Alamat</string>
    <string name="hint_provinsi">Provinsi</string>
    <string name="hint_kota">Kota</string>
    <string name="hint_kecamatan">Kecamatan</string>
    <string name="hint_kelurahan">Kelurahan</string>
    <string name="hint_pendidikan">Pendidikan</string>
    <string name="hint_kelas">Kelas</string>
    <string name="hint_kode_pos">Kode Pos</string>
    <string name="hint_tipe_alamat">Tipe Alamat</string>
    <string name="hint_status_tempat">Status Tempat Tinggal</string>
    <string name="hint_pendidikan_terakhir">Pendidikan Terakhir</string>
    <string name="hint_agama">Agama</string>
    <string name="hint_no_hp">No. Handphone</string>
    <string name="hint_pekerjaan">Pekerjaan</string>
    <string name="hint_btn_regist">Simpan dan Lanjutkan</string>
    <string name="hint_btn_regist_parent">Simpan</string>
    <string name="hint_nama_parent">Nama</string>

    <string name="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_contact">Contact Us</string>
    <string name="email_contact">email@gmail.com</string>
    <string name="telp_contact">021-xxxxxxxx</string>

</resources>
